# phylocompare

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: comp.rs  csv.rs  io.rs  main.rs
test_data/cmptrees/: 0_100_tips.nwk  0_10_tips.nwk  0_110_tips.nwk  0_120_tips.nwk  0_130_tips.nwk  0_140_tips.nwk  0_150_tips.nwk  0_20_tips.nwk  0_30_tips.nwk  0_40_tips.nwk  0_50_tips.nwk  0_60_tips.nwk  0_70_tips.nwk  0_80_tips.nwk  0_90_tips.nwk  1_100_tips.nwk  1_10_tips.nwk  1_110_tips.nwk  1_120_tips.nwk  1_130_tips.nwk  1_140_tips.nwk  1_150_tips.nwk  1_20_tips.nwk  1_30_tips.nwk  1_40_tips.nwk  1_50_tips.nwk  1_60_tips.nwk  1_70_tips.nwk  1_80_tips.nwk  1_90_tips.nwk  2_100_tips.nwk  2_10_tips.nwk  2_110_tips.nwk  2_120_tips.nwk  2_130_tips.nwk  2_140_tips.nwk  2_150_tips.nwk  2_20_tips.nwk  2_30_tips.nwk  2_40_tips.nwk  (+110 more)
test_data/reftrees/: 0_100_tips.nwk  0_10_tips.nwk  0_110_tips.nwk  0_120_tips.nwk  0_130_tips.nwk  0_140_tips.nwk  0_150_tips.nwk  0_20_tips.nwk  0_30_tips.nwk  0_40_tips.nwk  0_50_tips.nwk  0_60_tips.nwk  0_70_tips.nwk  0_80_tips.nwk  0_90_tips.nwk  1_100_tips.nwk  1_10_tips.nwk  1_110_tips.nwk  1_120_tips.nwk  1_130_tips.nwk  1_140_tips.nwk  1_150_tips.nwk  1_20_tips.nwk  1_30_tips.nwk  1_40_tips.nwk  1_50_tips.nwk  1_60_tips.nwk  1_70_tips.nwk  1_80_tips.nwk  1_90_tips.nwk  2_100_tips.nwk  2_10_tips.nwk  2_110_tips.nwk  2_120_tips.nwk  2_130_tips.nwk  2_140_tips.nwk  2_150_tips.nwk  2_20_tips.nwk  2_30_tips.nwk  2_40_tips.nwk  (+110 more)
