[package]
name = "phylocompare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
crossbeam-channel = "0.5.8"
gzp = "0.11.3"
indicatif = { version = "0.17.6", features = ["rayon"] }
itertools = "0.11.0"
phylotree = { git = "https://github.com/lucblassel/phylotree-rs", version = "0.1.2" }
rayon = "1.8.0"
serde_json = "1.0.107"

[profile.release]
debug = 1
